# CtxAI

./: .antigravityignore  .coderabbit.yaml  .coverage  .dockerignore  .gitattributes  .gitignore  .pr_agent.toml  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.server  DockerfileLocal  LICENSE  Makefile  README.md  ROADMAP.md  TODO  agent.py  coverage.xml  docker-compose.prod.yml  jsconfig.json  models.py  pyproject.toml  requirements.txt  requirements2.txt  run_ui.py
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.devcontainer/scripts/: post-create.sh
.gemini/: config.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LATEST_CHANGELOG.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  issue-auto-comments.yml  issue-report-config.json  labeler.yml  labels.yml  pr-auto-comments.yml  pr-badge.yml
.github/DISCUSSION_TEMPLATE/: questions.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: add-to-project.yml  autofix.yml  build.yml  bump-and-tag.yml  check-merge-conflicts.yml  ci.yml  cicd.yml  close-inactive.yml  contributors.yml  detect-conflicts.yml  docker-base.yml  docker-publish.yml  docker.yml  issue-manager.yml  label-approved.yml  label-sync.yml  labeler.yml  latest-changes.yml  lint.yml  pr-quality-check.yml  pre-commit.yml  project-management.yml  publish.yml  release.yml  smokeshow.yml  test-redistribute.yml  test.yml
api/: api_files_get.py  api_message.py  backup_create.py  backup_inspect.py  chat_create.py  chat_files_path_get.py  csrf_token.py  ctx_window_get.py  get_work_dir_files.py  history_get.py  message.py  self_update_schedule.py  skills.py
backend/api/: api_files_get.py  api_message.py  chat_files_path_get.py  health.py  message.py  restart.py  skills.py
backend/core/: agent.py  models.py
backend/utils/: api.py  backup.py  email_client.py  extension.py  fasta2a_client.py  files.py  git.py  maintenance.py  message_queue.py  projects.py  runtime.py  settings.py  shell_ssh.py  skills.py  state_monitor.py  update_check.py  websocket.py  websocket_manager.py
backend/websocket_handlers/: dev_websocket_test_handler.py  hello_handler.py  state_sync_handler.py
cli/: __init__.py  main.py  tunnel.py  ui.py
cli/commands/: agent.py  dev.py  ui.py
conf/: model_providers.yaml
data/logs/: log_20260310_125538.html  log_20260310_125916.html  log_20260310_130019.html  log_20260310_130322.html  log_20260310_130639.html  log_20260310_130946.html  log_20260310_132047.html  log_20260310_133517.html  log_20260310_134253.html  log_20260310_135108.html  log_20260310_153315.html  log_20260312_224321.html  log_20260312_235111.html  log_20260312_235245.html  log_20260312_235326.html  log_20260313_000626.html  log_20260313_000728.html  log_20260313_000940.html  log_20260313_001036.html  log_20260313_001108.html  log_20260313_001347.html  log_20260313_001846.html  log_20260313_002400.html  log_20260313_002812.html  log_20260313_003248.html  log_20260313_003350.html  log_20260313_003515.html  log_20260313_003632.html  log_20260313_003804.html  log_20260313_003926.html  log_20260313_004109.html  log_20260313_004256.html  log_20260313_004434.html  log_20260313_004638.html  log_20260313_010532.html  log_20260313_011310.html  log_20260313_011803.html  log_20260313_012222.html  log_20260313_012522.html  log_20260313_012718.html
docker/base/: build.txt
docker/run/: Dockerfile  build.txt  docker-compose.yml
docs/: README.md  community.md  quickstart.md
docs/agents/: AGENTS.components.md  AGENTS.extensions.md  AGENTS.modals.md  AGENTS.plugins.md
docs/developer/: architecture.md  connectivity.md  contributing-skills.md  extensions.md  mcp-configuration.md  notifications.md  plugins.md  websockets.md
docs/guides/: a2a-setup.md  api-integration.md  contribution.md  mcp-setup.md  projects.md  self-update.md  troubleshooting.md  usage.md
docs/release_notes/: v1.1.md
docs/setup/: dev-setup.md  installation.md  vps-deployment.md
helpers/: api.py  backup.py  docker.py  email_client.py  fasta2a_client.py  fasta2a_server.py  files.py  git.py  mcp_server.py  message_queue.py  persist_chat.py  plugins.py  projects.py  runtime.py  self_update.py  settings.py  skills.py  skills_cli.py  skills_import.py  state_monitor.py  subagents.py  task_scheduler.py  update_check.py  websocket_manager.py
lib/browser/: extract_dom.js
plugins/: README.md
plugins/_code_execution/: README.md
plugins/_email_integration/: README.md  plugin.yaml
prompts/: agent.system.main.communication_additions.md  agent.system.main.environment.md  agent.system.main.md  agent.system.main.role.md  agent.system.main.tips.py  agent.system.projects.active.md  agent.system.projects.main.md  agent.system.tool.a2a_chat.md  fw.initial_message.md
scripts/: coverage.sh  format.sh  label_approved.py  lint.sh  playwright  test-cov-html.sh  test-cov.sh  test.sh
tests/: chunk_parser_test.py  email_parser_test.py  rate_limiter_test.py  test_agent_context_concurrency.py  test_cache.py  test_dirty_json.py  test_docker_release_plan.py  test_errors.py  test_fasta2a_client.py  test_file_tree_visualize.py  test_http_auth_csrf.py  test_memory_manager.py  test_messages.py  test_metrics_loader.py  test_multi_tab_isolation.py  test_persist_chat_log_ids.py  test_plugins_cli.py  test_prometheus_metrics.py  test_rate_limiter.py  test_run_ui_config.py  test_self_update_tag_filter.py  test_settings_developer_sections.py  test_snapshot_parity.py  test_snapshot_schema_v1.py  test_socketio_library_semantics.py  test_socketio_unknown_namespace.py  test_state_monitor.py  test_state_sync_handler.py  test_state_sync_welcome_screen.py  test_structured_logging.py  test_tool_execution.py  test_websocket_client_api_surface.py  test_websocket_csrf.py  test_websocket_handlers.py  test_websocket_harness.py  test_websocket_integration.py  test_websocket_manager.py  test_websocket_namespace_discovery.py  test_websocket_namespace_security.py  test_websocket_namespaces.py  (+3 more)
webui/: index.html  index.js  login.html
webui/js/: api.js  (+1 more)
(+1209 files in other folders)
