[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

# =========================
# PROJECT METADATA
# =========================
[project]
name = "ctxai"
version = "0.1.0"
description = "CtxAI - Dynamic agentic AI framework"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "KhulnaSoft", email = "info@khulnasoft.com" },
]

classifiers = [
  # --- Maturity ---
  "Development Status :: 4 - Beta",

  # --- Audience ---
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Information Technology",

  # --- License ---
  "License :: OSI Approved :: MIT License",

  # --- Programming Language ---
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",

  # --- Topics ---
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: System :: Distributed Computing",

  # --- Frameworks ---
  "Framework :: FastAPI",
  "Framework :: Flask",

  # --- Environment ---
  "Environment :: Web Environment",
  "Environment :: Console",

  # --- OS ---
  "Operating System :: OS Independent",

  # --- Typing ---
  "Typing :: Typed",
]

# -------------------------
# CORE DEPENDENCIES
# -------------------------
dependencies = [
  # --- Web / API / Async ---
  "fastapi>=0.110,<1.0",
  "flask[async]>=3.0,<4.0",
  "a2wsgi>=1.10,<2.0",
  "uvicorn>=0.38,<1.0",
  "python-socketio>=5.14,<6.0",
  "wsproto>=1.2,<2.0",
  "nest-asyncio>=1.6,<2.0",

  # --- AI / LLM ---
  "openai>=1.99.5,<2.0",
  "litellm>=1.79,<2.0",
  "tiktoken>=0.8,<1.0",

  # LangChain (aligned versions)
  "langchain-core>=0.3.49,<0.4",
  "langchain-community>=0.3.19,<0.4",
  "langchain-unstructured>=0.1.6,<0.2",

  # Embeddings / Vector
  "sentence-transformers>=3.0,<4.0",
  "faiss-cpu>=1.9.0; sys_platform != 'darwin'",
  "faiss-cpu>=1.7.4,<1.8.1; sys_platform == 'darwin'",

  # --- Agent Protocols ---
  "mcp>=1.22,<2.0",
  "fastmcp>=2.13,<3.0",
  "fasta2a>=0.5,<1.0",

  # --- Browser Automation ---
  "playwright>=1.52,<2.0",
  "browser-use>=0.5.11",

  # --- Speech ---
  "openai-whisper>=20250625",
  "kokoro>=0.9,<1.0",
  "soundfile>=0.13,<1.0",

  # --- Document Processing ---
  "pypdf>=6.0,<7.0",
  "pymupdf>=1.25,<2.0",
  "pytesseract>=0.3,<1.0",
  "pdf2image>=1.17,<2.0",
  "unstructured[all-docs]>=0.16,<0.17",
  "unstructured-client>=0.31,<1.0",
  "markdown>=3.7,<4.0",
  "markdownify>=1.1,<2.0",
  "html2text>=2024.2.26",
  "beautifulsoup4>=4.12,<5.0",
  "lxml_html_clean>=0.3,<1.0",
  "newspaper3k>=0.2.8",

  # --- Networking / Infra ---
  "paramiko>=3.5,<4.0",
  "imapclient>=3.0,<4.0",
  "boto3>=1.35,<2.0",
  "exchangelib>=5.4,<6.0",

  # --- DevOps / System ---
  "docker>=7.1,<8.0",
  "GitPython>=3.1,<4.0",
  "giturlparse>=0.14,<1.0",
  "pathspec>=0.12,<1.0",

  # --- Search / Scraping ---
  "duckduckgo-search>=6.1,<7.0",

  # --- Utilities ---
  "pydantic>=2.11,<3.0",
  "python-dotenv>=1.1,<2.0",
  "psutil>=7.0,<8.0",
  "pytz>=2024.2",
  "webcolors>=24.6",
  "simpleeval>=1.0",
  "inputimeout>=1.0",
  "ansio>=0.0.1",
  "crontab>=1.0",

  # --- Platform-specific ---
  "pywinpty>=3.0; sys_platform == 'win32'",
]

# =========================
# CLI ENTRYPOINT
# =========================
[project.scripts]
ctxai = "ctxai.cli.main:main"

# =========================
# OPTIONAL DEPENDENCIES
# =========================
[project.optional-dependencies]

dev = [
  "pytest>=8.4",
  "pytest-asyncio>=1.2",
  "pytest-mock>=3.15",
  "pytest-cov>=7.0",

  "ruff>=0.9",
  "mypy>=1.15",
  "pre-commit>=4.5",

  "pyinstrument>=5.1",

  # typing
  "types-PyYAML",
  "types-pytz",
  "types-paramiko",
  "types-requests",
]

github-actions = [
  "httpx>=0.27,<1.0",
  "pydantic-settings>=2.1,<3.0",
  "pygithub>=2.3,<3.0",
  "pyyaml>=5.3,<7.0",
  "smokeshow>=0.5",
]

# =========================
# UV (RESOLUTION CONTROL)
# =========================
[tool.uv]
package = true

required-environments = [
  "sys_platform == 'darwin' and platform_machine == 'x86_64'",
  "sys_platform == 'darwin' and platform_machine == 'arm64'",
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
  "sys_platform == 'linux' and platform_machine == 'aarch64'",
  "sys_platform == 'win32' and platform_machine == 'AMD64'",
]

override-dependencies = [
  # Resolve browser-use vs litellm conflict
  "openai>=1.99.5",

  # macOS compatibility
  "numba<0.61.0; sys_platform == 'darwin' and platform_machine == 'x86_64'",
]

# =========================
# BUILD TARGET
# =========================
[tool.hatch.build.targets.wheel]
packages = ["src/ctxai"]

# =========================
# TESTING
# =========================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

# =========================
# LINTING (RUFF)
# =========================
[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E402"]

# =========================
# TYPE CHECKING
# =========================
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

# =========================
# PRE-COMMIT
# =========================
[tool.pre-commit]
default_stages = ["pre-commit"]

# =========================
# DEP GROUPS (PEP 735 future-proof)
# =========================
[dependency-groups]
dev = [
  "pre-commit>=4.5.1",
  "pytest-cov>=7.0.0",
]
